chore: job for publishing a label property graph version